--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Examen</title>
 </head>
+
 <body>
     <header>
         <h1>
@@ -23,14 +25,15 @@
     <main>
         <aside>
             <h2>Categorias</h2>
-            <input type="button" value = "Categoria 1">
-            <input type="button" value = "Categoria 2">
-            <input type="button" value = "Categoria 3">
-            <input type="button" value = "Categoria 4">
-            <input type="button" value = "Categoria 5">
+            <section id="categorias">
+
+            </section>
         </aside>
         <section>
             <h2>Productos</h2>
+            <section id="productos-contenedor">
+                
+            </section>
         </section>
     </main>
     <footer>
@@ -38,4 +41,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
